--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/styled-engine-sc": "^7.0.1",
+    "@mui/x-charts": "^8.11.2",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.8.4",
     "moment": "^2.30.1",
