--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_SERVER=http://192.168.184.43:8080
+# VITE_SERVER=http://192.168.184.43:8080
+
+# VITE_SERVER=http://10.120.4.84:8000
+VITE_SERVER=http://localhost:8000/
