--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^8.11.2",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.8.4",
+    "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
